# academic-digest

./: .env.example  .gitignore  1_get_cite_urls.ipynb  2_fetch_and_extract_pdfs.ipynb  3_extract_pdfs.ipynb  4_llm_process_of_extraction.ipynb  5_digest_summary.ipynb  README.md  article_creator.py  cites.csv  digest_summary.json  main.ipynb  pyproject.toml
