[tool.poetry]
name = "academic-digest"
version = "0.1.0"
description = ""
authors = ["Valery Verkhoturov <verhoturov.v9@rwb.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
google-search-results = "^2.4.2"
notebook = "^7.4.7"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
