[tool.poetry]
name = "academic-digest"
version = "0.1.0"
description = ""
authors = ["Valery Verkhoturov <verhoturov.v9@rwb.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
python-dotenv = "^1.2.1"
google-search-results = "^2.4.2"
notebook = "^7.4.7"
pandas = "^2.3.3"
matplotlib = "^3.10.7"
requests = "^2.32.5"
openai = "^2.9.0"
tqdm = "^4.67.1"
pymupdf4llm = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
